fixed bug with buttons overflowing

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ div {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 5%;
+  gap: 20px;
 }
 
 .buttons button {
